Refactor modal dimensions and improve keybind category initialization for better consistency